Some work on admin page layout

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -19,6 +19,7 @@ body {
     background: #C8E6C9;
     border-radius: 1%;
     padding: 20px;
+    margin-bottom: 5px;
 }
 
 /*Google material design pallet colour pallet*/
